--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build .
+      run: go build ./..
 
-#     - name: Test
-#       run: go test -v ./...
+    - name: Test
+      run: go test -v ./...
