--- a/.github/workflows/go_release.yml
+++ b/.github/workflows/go_release.yml
@@ -38,7 +38,7 @@ jobs:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
         body: |
-          See the tree for included functionality.
+          TODO: Replace this with release notes and publish.
         draft: true
         prerelease: false
 
